refactor: Collectors.toList -> Stream.toList로 변경