@@ -1,7 +1,6 @@
 package racingcar.domain;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CarFactory {
 
@@ -11,6 +10,6 @@ public class CarFactory {
     public static List<Car> generateCar(List<Name> namesOfCars) {
         return namesOfCars.stream()
                 .map(carName -> new Car(carName))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
